# EcommerceDemo

./: ReadMe.MD  docker-compose.yml
django-api/: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
django-api/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
django-api/accounts/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
django-api/cart/: admin.py  models.py  serializers.py  views.py
django-api/cart/migrations/: 0001_initial.py
django-api/config/: settings.py  urls.py
django-api/orders/: admin.py  models.py  serializers.py  views.py
django-api/orders/migrations/: 0001_initial.py
django-api/products/: admin.py  models.py  serializers.py  views.py
django-api/products/migrations/: 0001_initial.py
react-frontend/: Dockerfile  package.json  pnpm-lock.yaml
react-frontend/src/: App.tsx
react-frontend/src/components/admin/: ProductForm.tsx
react-frontend/src/components/cart/: CartItem.tsx  CartSummary.tsx
react-frontend/src/components/layout/: AuthLayout.tsx  Footer.tsx  Header.tsx  PageLayout.tsx  RouteGuard.tsx
react-frontend/src/contexts/: AuthContext.tsx  CartContext.tsx  OrderContext.tsx  ProductContext.tsx
react-frontend/src/lib/api/: client.ts  (+5 more)
react-frontend/src/pages/: AdminPage.tsx  CartPage.tsx  CheckoutPage.tsx  ForgotPasswordPage.tsx  Index.tsx  LoginPage.tsx  OrderConfirmationPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  ResetPasswordPage.tsx  SignupPage.tsx
react-frontend/src/store/: index.ts
react-frontend/src/types/: api.ts  product.ts  user.ts
(+14 files in other folders)
